<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mdinterior.mdinterior.presentation.viewModels.WelcomeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color"
        tools:context=".presentation.fragment.WelcomeFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/welcom_img"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:src="@drawable/welcom_img"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3" />

                <TextView
                    android:id="@+id/interior_design_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/urbanist_bold"
                    android:text="@string/interior_design"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_32sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/welcom_img"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="@dimen/dimen_56dp"
                    android:layout_marginHorizontal="@dimen/dimen_16dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/login"
                    android:onClick="@{()->viewModel.loginClick()}"
                    android:textColor="@color/black"
                    app:cornerRadius="@dimen/dimen_8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/interior_design_tv"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="@dimen/dimen_56dp"
                    android:layout_marginHorizontal="@dimen/dimen_16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/register"
                    android:onClick="@{()->viewModel.registerClick()}"
                    android:textColor="@color/white"
                    app:cornerRadius="@dimen/dimen_8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>