<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mdinterior.mdinterior.presentation.viewModels.auth.RegisterViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color"
        tools:context=".presentation.fragment.auth.RegisterFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:background="@drawable/outline_bg"
                    android:onClick="@{()->viewModel.backClick()}"
                    android:src="@drawable/back_arrow_id_ic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                    android:fontFamily="@font/urbanist_bold"
                    android:text="Hello! Register to get started"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_32sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton"
                    app:layout_constraintVertical_bias="0.100000024" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    style="@style/outlineBox"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintVertical_bias="0.100000024">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:maxLines="1"
                        android:text="@={viewModel.registerUiData.username}"
                        android:textColor="@color/white"
                        android:textColorHint="@color/text_light_color" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout3"
                    style="@style/outlineBox"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                    app:layout_constraintVertical_bias="0.0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:maxLines="1"
                        android:text="@={viewModel.registerUiData.emailId}"
                        android:textColor="@color/white"
                        android:textColorHint="@color/text_light_color" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout4"
                    style="@style/outlineBox"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
                    app:layout_constraintVertical_bias="0.0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:maxLines="1"
                        android:text="@={viewModel.registerUiData.password}"
                        android:textColor="@color/white"
                        android:textColorHint="@color/text_light_color" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout5"
                    style="@style/outlineBox"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
                    app:layout_constraintVertical_bias="0.0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:maxLines="1"
                        android:text="@={viewModel.registerUiData.confirmPassword}"
                        android:textColor="@color/white"
                        android:textColorHint="@color/text_light_color" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="@dimen/dimen_56dp"
                    android:layout_marginHorizontal="@dimen/dimen_16dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/white"
                    android:onClick="@{()->viewModel.registerClick()}"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    app:cornerRadius="@dimen/dimen_8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
                    app:layout_constraintVertical_bias="0.0" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>